<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SupervisorPage">

    <TextView
        android:id="@+id/supernewcomplaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10sp"
        android:gravity="center_horizontal"
        android:text="@string/viewnewcomplaints"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/superassigncomplaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center_horizontal"
        android:text="@string/assigncomplaints"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/superallcomplaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center_horizontal"
        android:text="@string/viewallcomplaints"
        android:textSize="30sp"/>
</LinearLayout>